--- a/app/assets/stylesheets/helpers/hub/data.scss
+++ b/app/assets/stylesheets/helpers/hub/data.scss
@@ -74,6 +74,7 @@
     animation-duration: 0.2s;
     animation-timing-function: linear;
     position: absolute !important;
+    display: none !important;
   }
 
   .card-container {
