Add /api/v1/otus/:id/inventory/keys metadata endpoint

--- a/app/views/observation_matrices/_attributes.html.erb
+++ b/app/views/observation_matrices/_attributes.html.erb
@@ -3,3 +3,8 @@
   <%= @observation_matrix.name %>
 </p>
 
+<p>
+  <strong>Otu (parent/scoping):</strong>
+  <%= otu_link(@observation_matrix.otu) %>
+</p>
+
