Rename verbatim_trip_code to verbatim_field_number #4058

--- a/app/views/collecting_events/_attributes.html.erb
+++ b/app/views/collecting_events/_attributes.html.erb
@@ -63,7 +63,7 @@
 
   <p>
     <strong>Verbatim trip identifier:</strong>
-    <%= object.verbatim_trip_identifier %>
+    <%= object.verbatim_field_number %>
   </p>
 
   <p>
