CVrbatim field number labell changes

--- a/app/views/collecting_events/_attributes.html.erb
+++ b/app/views/collecting_events/_attributes.html.erb
@@ -62,7 +62,7 @@
   </p>
 
   <p>
-    <strong>Verbatim trip identifier:</strong>
+    <strong>Verbatim field number:</strong>
     <%= object.verbatim_field_number %>
   </p>
 
