--- a/app/views/collecting_events/_card.html.erb
+++ b/app/views/collecting_events/_card.html.erb
@@ -10,7 +10,7 @@
       'Verbatim collectors:': object.verbatim_collectors,
       'Verbatim method:': object.verbatim_method,
       'Geographic area:': object_link(object.geographic_area),
-      'Verbatim trip identifier:': object.verbatim_field_number,
+      'Verbatim field number:': object.verbatim_field_number,
       'Field notes:': object.field_notes,
       'Verbatim date:': object.verbatim_date,
       'Verbatim habitat:': object.verbatim_habitat,
