--- a/app/views/collecting_events/list.html.erb
+++ b/app/views/collecting_events/list.html.erb
@@ -10,7 +10,7 @@
     <!--<th>Verbatim longitude</th>-->
     <!--<th>Verbatim latitude</th>-->
     <!--<th>Verbatim geolocation uncertainty</th>-->
-    <!--<th>Verbatim trip identifier</th>-->
+    <!--<th>Verbatim field number</th>-->
     <!--<th>Verbatim method</th>-->
     <!--<th>Minimum elevation</th>-->
     <!--<th>Maximum elevation</th>-->
