--- a/app/views/tasks/collection_objects/match/index.html.erb
+++ b/app/views/tasks/collection_objects/match/index.html.erb
@@ -1,3 +1,1 @@
-<div id="vue-task-collection-object-match">
-  Welcome to your new Vue task!
-</div>
+<div id="vue-task-collection-object-match"></div>
