--- a/app/views/tasks/observation_matrices/observation_matrix_hub/index.html.erb
+++ b/app/views/tasks/observation_matrices/observation_matrix_hub/index.html.erb
@@ -34,11 +34,10 @@
               <td> <%= om.name -%> </td>
               <td> <%= om.observation_matrix_rows.count -%> </td>
               <td> <%= om.observation_matrix_columns.count -%> </td>
-              <td> <%= link_to('View', observation_matrix_view_task_path(observation_matrix_id: om.id)) -%> </td>
-              <td> <%= link_to('Edit', new_matrix_task_path(observation_matrix_id: om.id)) -%> </td>
+              <td> <%= radial_navigation_tag(om) -%>
+              <td> <%= radial_annotator(om) -%>
               <td>
                 <%= link_to('Image matrix', index_matrix_image_task_path(observation_matrix_id: om.id)) if om.is_media_matrix? -%>
-                <%= link_to('Interactive key', interactive_key_task_path(observation_matrix_id: om.id)) unless om.is_media_matrix? -%>
               </td>
               <td> <%= pin_item_to_pinboard_link(om, sessions_current_user) -%></td>
               <%= fancy_options_cells_tag(om) -%>
