--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,10 +16,16 @@
         <% if sessions_current_user.is_administrator? %>
           <h2> Administration (not visible to user)</h2>
           <div>
+            <h3> User data </h3>
+            <%= link_to('Created', data_user_path(@user, target: :created),  data: { turbolinks: false } ) -%>,
+            <%= link_to('Updated', data_user_path(@user, target: :updated),  data: { turbolinks: false } ) -%>
+          </div>
+
+          <div>
             <h3> User's projects </h3>
             <ul>
               <% if @user.projects.any? %>
-                <%= @user.projects.pluck(:name).collect{|n| tag.li n}.join.html_safe %>
+                <%= @user.projects.order(:name).collect{|n| tag.li link_to(n.name, select_project_path(n))}.join.html_safe %>
               <% else %>
                 <li><i>None</i></li>
               <% end %>
