--- a/app/views/administration/user_activity.html.erb
+++ b/app/views/administration/user_activity.html.erb
@@ -1,6 +1,4 @@
-<%= content_for :head do -%>
-  <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js" %>
-<% end %>
+<%= graph_javascript_tag %>
 
 <h1> Administration - User activity </h1>
 
