--- a/app/views/tasks/collection_objects/chronology/index.html.erb
+++ b/app/views/tasks/collection_objects/chronology/index.html.erb
@@ -1,7 +1,4 @@
-<%= content_for :head do -%>
-  <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.js",
-    "https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"  %>
-<% end %>
+<%= graph_javascript_tag %>
 
 <%= tag.h1 'Task - Collection object chronology', id: :top -%>
 
