--- a/app/views/tasks/projects/data/index.html.erb
+++ b/app/views/tasks/projects/data/index.html.erb
@@ -34,16 +34,16 @@
     <div>
 
       <table>
-        <% @project.has_many_relationships.each do |r| -%>
+        <% ApplicationEnumeration.klass_reflections(Project).select{|a| !a.klass.abstract_class?  }.each do |r| -%>
           <% begin %>
-            <% a = @project.send(r)&.count %>
+            <% a = @project.send(r.name)&.count %>
             <% if a && a > 0 %>
               <tr>
-                <% b = "#{r.classify.pluralize}Controller".safe_constantize -%>
+                <% b = "#{r.name.to_s.classify.pluralize}Controller".safe_constantize -%>
                 <% c = b&.new&.respond_to?(:download) ? true : false -%>
-                <%= tag.td r.to_s.humanize -%>
+                <%= tag.td r.name.to_s.humanize -%>
                 <%= tag.td a -%>
-                <%= tag.td (c ? link_to('Download', download_path_for_model(r.classify.safe_constantize)) : 'Unavailable') -%>
+                <%= tag.td (c ? link_to('Download', download_path_for_model(r.name.to_s.classify.safe_constantize)) : 'Unavailable') -%>
               </tr>
             <% end %>
           <% rescue ActiveRecord::HasManyThroughOrderError %>
