Update packages. Replace @import by @use. Remove deprecated dart-sass functions. Update IBM Plex fonts

--- a/app/assets/stylesheets/base/structure.scss
+++ b/app/assets/stylesheets/base/structure.scss
@@ -3,7 +3,7 @@
 body {
   background-color: $body_background;
   color: $default_text;
-  font-family: IBM Plex Sans,Helvetica,Arial,Verdana,Tahoma; 
+  font-family: 'IBM Plex Sans', sans-serif;
   font-size: 13px !important;
-  margin:0;
+  margin: 0;
 }
