--- a/app/javascript/vue/assets/styles/variables/_sizes.scss
+++ b/app/javascript/vue/assets/styles/variables/_sizes.scss
@@ -9,6 +9,6 @@ $tw-input-sizes: (
 
 :export {
   @each $key, $value in $tw-input-sizes {
-    #{unquote($key)}: #{$value};
+    --#{$key}: #{$value};
   }
 }
