--- a/app/javascript/vue/tasks/observation_matrices/matrix_row_coder/MatrixRowCoder/QualitativeDescriptor/QualitativeDescriptor.scss
+++ b/app/javascript/vue/tasks/observation_matrices/matrix_row_coder/MatrixRowCoder/QualitativeDescriptor/QualitativeDescriptor.scss
@@ -1,4 +1,4 @@
-@import '../../styles/descriptorTitle.scss';
+@use '../../styles/descriptorTitle.scss';
 
 .qualitative-descriptor {
   position: relative;
