#1954 Make GI has_many GZs (instead of has_one), for multi-project GZ creation

--- a/app/views/gazetteers/show.html.erb
+++ b/app/views/gazetteers/show.html.erb
@@ -7,7 +7,7 @@
   <%= geographic_item_link(@gazetteer.geographic_item) -%>
   </p>
 
-  <%= link_to('Debug default geographic item', debug_geographic_item_task_path(geographic_item_id: @gazetteer.geographic_item_id)) %>
+  <%= link_to('Debug geographic item', debug_geographic_item_task_path(geographic_item_id: @gazetteer.geographic_item_id)) %>
 
 <% end %>
 
