--- a/app/assets/stylesheets/base/panels.scss
+++ b/app/assets/stylesheets/base/panels.scss
@@ -1,51 +1,47 @@
 .panels-container {
   margin-top: $standard_padding;
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
   width: 100%;
-}
-
-.panel h2, h3, h4, .subtitle {
-  font-weight: 500;
 }
 
 .panel {
   display: flex;
-  flex-direction:column;
-  justify-content:flex-start;
+  flex-direction: column;
+  justify-content: flex-start;
   box-shadow: rgba(36, 37, 38, 0.08) 4px 4px 15px 0px;
-  border-radius: .9rem;
+  border-radius: 0.9rem;
   background-color: $panel_background;
   a {
     text-decoration: none;
   }
-  
+
   h3 {
-    padding: $standard_padding*.2 0;
-    margin: $standard_padding*.2 0;
+    padding: $standard_padding * 0.2 0;
+    margin: $standard_padding * 0.2 0;
     display: flex;
     flex-direction: row;
   }
 
-  .subtitle { 
+  .subtitle {
     display: flex;
-    justify-content:space-between;
-    border-bottom: 1px solid $navigation_border;    
-  }  
+    justify-content: space-between;
+    border-bottom: 1px solid $navigation_border;
+  }
 
   .subheader {
     padding-top: $standard_padding * 0.5;
     font-weight: 700;
     font-size: $font_title;
-    border:none;
-  }  
+    border: none;
+  }
 
   .to-right {
-    position: absolute; 
-    top: 0; 
+    position: absolute;
+    top: 0;
     right: 0;
   }
-  
+
   .title-section {
     position: relative;
   }
@@ -58,68 +54,67 @@
     display: flex;
     min-height: 42px;
     font-size: $font_title;
-    align-items:center;
+    align-items: center;
     padding-left: $standard_padding;
     padding-right: $standard_padding;
     border-bottom: 2px solid transparent;
-    justify-content:space-between;  
-    position: relative; 
+    justify-content: space-between;
+    position: relative;
     a {
       font-size: $font_small;
-    }       
+    }
     span {
       b {
         font-size: $font_normal;
         opacity: 0.7;
       }
-    } 
+    }
   }
- 
+
   .nav-line {
     border-bottom: 2px solid $color-secondary-2-4;
-  } 
+  }
 
   .title.shared {
-    border-bottom:2px solid $color-secondary-1-3;
+    border-bottom: 2px solid $color-secondary-1-3;
   }
 
   .title.application_defined {
-    border-bottom:2px solid $color-primary-4;
+    border-bottom: 2px solid $color-primary-4;
   }
 
-
   .action-line {
-    border-bottom:2px solid $color-complement-3;
-  }  
+    border-bottom: 2px solid $color-complement-3;
+  }
 
   .navigation-bar-right {
     display: flex;
-    justify-content:flex-end; 
-    flex-direction: row; 
+    justify-content: flex-end;
+    flex-direction: row;
     align-items: center;
     padding-right: $standard_padding;
-  }   
+  }
 
   .navigation-bar-left {
     display: flex;
     height: 40px;
-    justify-content:flex-start; 
-    flex-direction: row; 
+    justify-content: flex-start;
+    flex-direction: row;
     align-items: center;
     padding-left: $standard_padding;
-  }                  
+  }
   .inline {
     display: flex;
-    flex-direction:row;
-    align-items:center;          
+    flex-direction: row;
+    align-items: center;
     text-decoration: none;
-  }  
+  }
 
   .disable {
     opacity: 0.5;
     background-color: $navigation_background;
     background-image: none !important;
-  }       
+  }
 
   .disable:hover {
     background-color: $navigation_background !important;
@@ -128,14 +123,13 @@
   }
 }
 
-
 .no-borders {
-  border:none !important;
+  border: none !important;
 }
 
 .no-shadow {
-  box-shadow:none !important;
-}  
+  box-shadow: none !important;
+}
 
 .content {
   padding: $standard_padding;
