Add radial annotator for OTUs

--- a/app/views/tasks/nomenclature/browse/index.html.erb
+++ b/app/views/tasks/nomenclature/browse/index.html.erb
@@ -18,6 +18,7 @@
         <span class="margin-medium-right">OTU</span>
         <div class="square-brackets">
           <ul class="no_bullets context-menu">
+            <li><%= radial_annotator_otu(@taxon_name) %></li>
             <li><%= browse_otu_link(@taxon_name) %></li>
             <li><%= otus_radial_disambiguate(@taxon_name) %></li>
           </ul>
