--- a/app/views/tasks/gis/simplemappr/index.html.erb
+++ b/app/views/tasks/gis/simplemappr/index.html.erb
@@ -2,7 +2,14 @@
 <em> Paste the copied table into a text file, name it your_data.txt. The file should load at simplemappr. </em>
 <br/>
 <br/>
-<%= copy_table_to_clipboard('div#simplemappr') %>
-<div id="simplemappr">
-  <%= table_from_csv( simple_mappr_data(params) ) %> 
-</div>
+
+<% d = simple_mappr_data(params) %>
+
+<% if d.nil? %>
+  <%= tag.div('No data, or > 10k rows returned.', class: [:feedback, 'feedback-warning'])  %>
+<% else %>
+  <%= copy_table_to_clipboard('div#simplemappr') %>
+  <div id="simplemappr">
+    <%= table_from_csv( d ) %> 
+  </div>
+<% end %>
