update instructions to avoid temporary docker mount

--- a/app/views/tasks/projects/data/index.html.erb
+++ b/app/views/tasks/projects/data/index.html.erb
@@ -11,10 +11,9 @@
     <p>To import into a <code>docker compose</code> development environment:</p>
     <ol>
       <li>Download and unzip the file. In this example, assume that creates a local file <code>unzip/dump.sql</code></li>
-      <li>Mount the unzipped file in the <code>db</code> container. For example add a line to <code>docker-compose.yml</code> inside <code>services.app.db.volumes</code> like this: <code>- ./unzip:/mnt/unzip</code> </li>
       <li>Drop existing DB: <code>docker compose exec app bundle exec rails db:drop</code></li>
       <li>Create empty DB: <code>docker compose exec app bundle exec rails db:create</code></li>
-      <li>Restore DB: <code>docker compose exec db psql -U postgres -d taxonworks_development -f /mnt/unzip/dump.sql</code></li>
+      <li>Restore DB: <code>docker compose exec -T db psql -U postgres -d taxonworks_development -f - < unzip/dump.sql</code></li>
     </ol>
 
     <div>
