Add same behaviour for data section #4177

--- a/app/assets/stylesheets/helpers/hub/data.scss
+++ b/app/assets/stylesheets/helpers/hub/data.scss
@@ -87,10 +87,25 @@
     animation-timing-function: linear;
     animation-fill-mode: forwards;
     margin: $standard_margin * 0.5;
-    [data-method='post'] {
-      position: absolute;
-      right: 12px;
+  }
+
+  .fav-link {
+    position: absolute;
+    right: 12px;
+    border-radius: 100%;
+    a {
+      padding: 8px;
+      border-radius: 100%;
+      right: 0px;
     }
+  }
+
+  .fav-link .unfavorite_link:hover {
+    animation: pulse-red 2s infinite;
+  }
+
+  .fav-link .favourite_link:hover {
+    animation: pulse-green 2s infinite;
   }
 
   .data_card:hover {
