--- a/app/views/conveyances/_attributes.html.erb
+++ b/app/views/conveyances/_attributes.html.erb
@@ -1,27 +1,27 @@
-<div id="<%= dom_id conveyance %>">
+<div id="<%= dom_id @conveyance %>">
   <p>
     <strong>Sound:</strong>
-    <%= conveyance.sound_id %>
+    <%= @conveyance.sound_id %>
   </p>
 
   <p>
     <strong>Conveyance object:</strong>
-    <%= conveyance.conveyance_object_id %>
+    <%= @conveyance.conveyance_object_id %>
   </p>
 
   <p>
     <strong>Project:</strong>
-    <%= conveyance.project_id %>
+    <%= @conveyance.project_id %>
   </p>
 
   <p>
     <strong>Created by:</strong>
-    <%= conveyance.created_by_id %>
+    <%= @conveyance.created_by_id %>
   </p>
 
   <p>
     <strong>Updated by:</strong>
-    <%= conveyance.updated_by_id %>
+    <%= @conveyance.updated_by_id %>
   </p>
 
 </div>
